--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -2,6 +2,10 @@
   background-color: white;
   margin-bottom: 16px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  z-index: 5;
+  width: 100%;
 }
 
 .content {
